zno-macro-draft/tests/zno/ui/err/002-name-is-symbol.stderr
error: expected literal
 --> tests/zno/ui/err/002-name-is-symbol.rs:3:16
  |
3 | #[zno(name = struct)]
  |                ^^^^^^
