zno-macro-draft/tests/zno/ui/err/002-name-is-symbol.rs
use zno::zno;

#[zno(name = struct)]
fn f() {}

fn main() {}
